--- a/distribution/templates/distribution/distributionparams_detail.html
+++ b/distribution/templates/distribution/distributionparams_detail.html
@@ -1,13 +1,12 @@
 {% extends 'distribution/main.html' %}
 {% load static %}
-{% load my_tags %}
 {% block content %}
 
 <main role="main">
 
     <section class="jumbotron text-center">
         <div class="container">
-            <h1 class="jumbotron-heading">Наши товары</h1>
+            <h1 class="jumbotron-heading">Одна из лоховских рассылок</h1>
         </div>
     </section>
 
@@ -16,15 +15,12 @@
 
             <div class="col-md-12">
                 <div class="card mb-4 box-shadow mx-auto text-center">
-                    <img class="card-img-top"
-                         src='{{ object.image|mymedia }}'
-                         alt="Card image cap">
                     <div class="card-body">
                         <p class="card-text">{{ object }}</p>
                         <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                            <div class="card-body d-flex justify-content-center align-items-center">
+                                <a href="{% url 'distribution:distparams' %}" type="button"
+                                   class="btn btn-lg btn-outline-primary">Назад</a>
                             </div>
                         </div>
                     </div>
