--- a/distribution/templates/distribution/client_list.html
+++ b/distribution/templates/distribution/client_list.html
@@ -17,15 +17,19 @@
                         <th><h4>ФИО клиента</h4></th>
                         <th><h4>email клиента</h4></th>
                         <th><h4>Комментарий</h4></th>
+                        {% if request.user.is_superuser or request.user.is_content_manager %}
                         <th><h4>Исправить данные</h4></th>
+                        {% endif %}
                     </tr>
                     {% for object in object_list %}
                     <tr>
                         <td><h4>{{ object.FIO }}</h4></td>
                         <td><h4>{{ object.email }}</h4></td>
                         <td><h4>{{ object.comment }}</h4></td>
+                        {% if request.user.is_superuser or request.user.is_content_manager %}
                         <td><h4><a class="btn btn-lg btn-warning"
                                    href="{% url 'distribution:edit_client' object.pk %}">Исправить</a></h4></td>
+                        {% endif %}
                         {% endfor %}
                     </tr>
                 </table>
@@ -34,8 +38,10 @@
     </div>
     <div class="row text-right mt-4">
         <div class="col-12">
+            {% if request.user.is_superuser or request.user.is_content_manager %}
             <a class="p-2 btn btn-outline-primary btn-block btn-lg" href="{% url 'distribution:create_client' %}">Создать
                 нового клиента</a>
+            {% endif %}
         </div>
     </div>
     {% endblock %}
