--- a/distribution/templates/distribution/includes/inc_main_menu.html
+++ b/distribution/templates/distribution/includes/inc_main_menu.html
@@ -4,5 +4,13 @@
         <a class="p-2 btn btn-outline-primary" href="{% url 'distribution:clients_list' %}">Список клиентов</a>
         <a class="p-2 btn btn-outline-primary" href="/">Рассылки</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'distribution:log_list' %}">Журнал рассылок</a>
+
+        {% if user.is_authenticated %}
+        <a class="p-2 btn btn-outline-primary" href="{% url 'users:profile' %}">Профиль</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'users:logout' %}">Выйти</a>
+        {% else %}
+        <a class="p-2 btn btn-outline-primary" href="{% url 'users:login' %}">Войти</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'users:register' %}">Регистрация</a>
+        {% endif %}
     </nav>
 </div>
