--- a/distribution/templates/distribution/includes/inc_main_menu.html
+++ b/distribution/templates/distribution/includes/inc_main_menu.html
@@ -12,5 +12,8 @@
         <a class="p-2 btn btn-outline-primary" href="{% url 'users:login' %}">Войти</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'users:register' %}">Регистрация</a>
         {% endif %}
+        {% if perms.users.view_user %}
+        <a class="p-2 btn btn-outline-primary" href="{% url 'users:users' %}">Пользователи</a>
+        {% endif %}
     </nav>
 </div>
