--- a/distribution/templates/distribution/log_list.html
+++ b/distribution/templates/distribution/log_list.html
@@ -45,7 +45,7 @@
                         <th><h4>Статус рассылки</h4></th>
                     </tr>
                     {% for object in object_list %}
-                    {% if object.mailing_list.owner == request.user or request.user.is_superuser or request.user.is_content_manager %}
+                    {% if object.mailing_list.owner == request.user or request.user.is_superuser %}
                     <tr>
                         <td><h4>{{ object.time }}</h4></td>
                         <td><h4>{{ object.mailing_list }}</h4></td>
