--- a/distribution/templates/distribution/mailingsettings_update_form.html
+++ b/distribution/templates/distribution/mailingsettings_update_form.html
@@ -23,6 +23,7 @@
     </div>
     <div class="col-md-6">
         <div class="card mb-4 box-shadow">
+            {% if request.user.is_superuser %}
             <div class="card-header">
                 <h3>Сообщения</h3>
             </div>
@@ -30,6 +31,7 @@
                 {{ formset.management_form }}
                 {{ formset.forms.0.as_p }}
             </div>
+            {% endif %}
         </div>
     </div>
 </form>
