last part of work

--- a/distribution/templates/distribution/log_list.html
+++ b/distribution/templates/distribution/log_list.html
@@ -1,7 +1,7 @@
 {% extends "distribution/base.html" %}
 {% block content %}
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-1">Журнал рассылок</h1>
+    <h3 class="display-3">Лог рассылок</h3>
 </div>
 
 <div class="container col-8 mt-2 mb-5">
