--- a/distribution/templates/distribution/includes/inc_main_menu.html
+++ b/distribution/templates/distribution/includes/inc_main_menu.html
@@ -3,7 +3,7 @@
     <nav class="ms-5">
         <a class="p-2 btn btn-outline-primary" href="{% url 'distribution:clients_list' %}">Список клиентов</a>
         <a class="p-2 btn btn-outline-primary" href="/">Рассылки</a>
-        <a class="p-2 btn btn-outline-primary" href="{% url 'distribution:log_list' %}">Журнал рассылок</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'distribution:log_list' %}">Лог рассылок</a>
 
         {% if user.is_authenticated %}
         <a class="p-2 btn btn-outline-primary" href="{% url 'users:profile' %}">Профиль</a>
